fix for image not showing live

--- a/style.css
+++ b/style.css
@@ -134,7 +134,7 @@ input[type="range"]::-webkit-slider-thumb {
   width: 2.5rem;
   border-radius: 50%;
   background-color: var(--secondary-cyan);
-  background-image: url("../images/icon-slider.svg");
+  background-image: url(../images/icon-slider.svg);
   background-position: center;
   background-repeat: no-repeat;
   cursor: pointer;
